2009-11-04  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix code generation for `-b utcx -EE'.

	* tools/bin/cce.in: Provide compiler for `-b utcx', so that `slc
	-EE' can pass preprocessing.

	* tools/lib/t-utc/include/sl_support.h: Provide (empty) since it
	is required by `-EE'.
	
	* tools/lib/t-utc/slimpl.m4: Add more whitespace to make output
	more palatable.

2009-11-04  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Optimize the `seqc' target.
	
	* tools/lib/t-seqc/slimpl.m4: Use `long' for index values.

2009-11-04  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Optimize the `ptl' target.
	
	* tools/lib/host-host-ptl/include/create.tpl,
	* tools/lib/host-host-ptl/include/ptl_svp.h,
	* tools/lib/host-host-ptl/ptl_svp.cc,
	* tools/lib/t-ptl/simpl.m4: Get rid of references to
	`squeeze'. Use `long' for index values.

2009-11-03  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix minor portability issue.
	
	* tools/include/svp/compiler.h: Rewrite definition of `use()' to
	make it portable.

2009-10-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Cosmetic fixes for `slt'.
	
	* tools/bin/slt.in: Improve readability of test log. 

2009-10-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Cosmetic fixes for `slr'.
	
	* tools/bin/slr.in: Do not complain about `-n' being used if it
	specifies multiple places. (requested by M. Hicks)

	* tools/lib/r-mtsparc-sim.sh.in, 	
	* tools/lib/r-mtsparc-sim.sh.in: Allow `SIMARGS' to override
	`-n'. (requested by M. Hicks)	

2009-10-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug in shared handling in `ppp' target.

	The latest changesets allowed the `fibonacci' demo program to fail
	by letting an alias to the incoming dependent leak to the outgoing
	write, causing no dependent read to actually occur in the location
	defined by the source program. Synchronization was thus not
	achieved properly.
	
	* tools/lib/t-pppalpha/include/sl_support.h: Clobber the dependent
	in `sl_setp', albeit at a different place than initially.
