@@ -1,5 +1,12 @@
 2009-11-04  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
+	Do not warn about `ctime.h' when including `svp/perf.h'.
+
+	* lib/include/ctime.h: Subject warning to conditional.
+	* lib/include/svp/perf.h: Set conditional accordingly.
+
+2009-11-04  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
 	Fix code generation for `-b utcx -EE'.
 
 	* tools/bin/cce.in: Provide compiler for `-b utcx', so that `slc
